tests/syntax/invalid/decimal_literal_trailing_underscore.zn
def f() {
    // error: underscore is trailing instead of between digits
    var x = 123_;
}
